--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before-install:
 
 script:
   - python manage.py migrate
-  - black -- check .
+  - black .
   - flake8 --max-line-length=92
   - coverage run --source='.' manage.py test
 
