--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before-install:
 script:
   - python manage.py migrate
   - black .
-  - flake8
+  - flake8 .
   - coverage run --source='.' manage.py test
 
 after_success:
