--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@ Pipfile
 Pipfile.lock
 .env
 .idea
-.db.sqlite3
-accounts.__pycache__/
-StudyCity.__pycache__/
-accounts.migrations.__pycache__/
+__pycache__
+db.sqlite3
