--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before-install:
 
 script:
   - python manage.py migrate
+  - python manage.py makemigrations --merge
   - python manage.py collectstatic --noinput
   - black .
   - flake8 .
