--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before-install:
   - pip install -r requirements.txt
 
 script:
+  - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py collectstatic --noinput
   - black .
