--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ before-install:
   - pip install -r requirements.txt
 
 script:
+  - python manage.py makemigrations
   - python manage.py migrate
-  - python manage.py migrate --run-syncdb
   - python manage.py collectstatic --noinput
   - black .
   - flake8 .
